# Robot-Behavior

./: CMakeLists.txt  README.md  package.xml
help/: 1. Setting Up the Raspberry Pi.docx  ROS_Package_Setup_and_Run_Guide.docx
launch/: robot_behavior.launch
scripts/: robot_behavior.py  ultrasonic_sensor.py  yolo_detector.py
