<?xml version="1.0"?>
<package format="2">
    <name>robot_behavior</name>
    <version>0.0.0</version>
    <description>The robot_behavior package</description>

    <maintainer email="your_email@example.com">Jawad</maintainer>
    <license></license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>opencv</build_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>opencv</exec_depend>

    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
